[gd_scene load_steps=8 format=1]

[ext_resource path="res://ui/main_menu2.gd" type="Script" id=1]
[ext_resource path="res://ui/GodoM.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/knight_type.gd" type="Script" id=3]
[ext_resource path="res://ui/gen_preset.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.219608, 0.294118, 0.368627, 1 )
light_color = Color( 0.219608, 0.294118, 0.368627, 1 )
dark_color = Color( 0.219608, 0.294118, 0.368627, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="main_screen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1.0
margin/right = 400.0
margin/bottom = 641.0
custom_styles/panel = SubResource( 1 )

[node name="Battle_Deck" type="Panel" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 380.0
margin/bottom = 70.0

[node name="title" type="Label" parent="Background/Battle_Deck"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 5.0
margin/right = 155.0
margin/bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Battle Deck"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player1" type="Button" parent="Background/Battle_Deck"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 251.0
margin/top = 5.0
margin/right = 291.0
margin/bottom = 45.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1P"
flat = false
clip_text = true

[node name="Player2" type="Button" parent="Background/Battle_Deck"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 303.0
margin/top = 5.0
margin/right = 343.0
margin/bottom = 45.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2P"
flat = false
clip_text = true

[node name="Panel1" type="Panel" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 336.0
margin/right = 377.0
margin/bottom = 386.0

[node name="title" type="Label" parent="Background/Panel1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 5.0
margin/right = 155.0
margin/bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "AMMO Collection"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Knights_grid" type="GridContainer" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 84.0
margin/right = 369.0
margin/bottom = 130.0
columns = 8

[node name="Button1" type="Button" parent="Background/Knights_grid"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false
clip_text = true
script/script = ExtResource( 3 )

[node name="Skill_grid" type="GridContainer" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 137.0
margin/right = 380.0
margin/bottom = 326.0
custom_constants/vseparation = 20
custom_constants/hseparation = 25
columns = 4

[node name="Button1" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button2" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 95.0
margin/top = 0.0
margin/right = 165.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button3" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 0.0
margin/right = 260.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button4" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = 0.0
margin/right = 355.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button5" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 70.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button6" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 95.0
margin/top = 100.0
margin/right = 165.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button7" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 100.0
margin/right = 260.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button8" type="Button" parent="Background/Skill_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = 100.0
margin/right = 355.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 396.0
margin/right = 393.0
margin/bottom = 622.0
scroll/horizontal = false
scroll/vertical = true

[node name="AMMO_grid" type="GridContainer" parent="Background/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 355.0
margin/bottom = 280.0
custom_constants/vseparation = 20
custom_constants/hseparation = 25
columns = 4

[node name="Button1" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button2" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 95.0
margin/top = 0.0
margin/right = 165.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button3" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 0.0
margin/right = 260.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button4" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = 0.0
margin/right = 355.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button5" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 70.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button6" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 95.0
margin/top = 100.0
margin/right = 165.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button7" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 100.0
margin/right = 260.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button8" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = 100.0
margin/right = 355.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button9" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 200.0
margin/right = 70.0
margin/bottom = 280.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button10" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 95.0
margin/top = 200.0
margin/right = 165.0
margin/bottom = 280.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button11" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 200.0
margin/right = 260.0
margin/bottom = 280.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="Button12" type="Button" parent="Background/ScrollContainer/AMMO_grid"]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = 200.0
margin/right = 355.0
margin/bottom = 280.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true

[node name="results" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 510.0
margin/top = 103.0
margin/right = 746.0
margin/bottom = 117.0
text = "Results"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="blue_team" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 572.0
margin/top = 175.0
margin/right = 716.0
margin/bottom = 189.0
text = "Blue Team : 0 WIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="red_team" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 570.0
margin/top = 217.0
margin/right = 698.0
margin/bottom = 231.0
text = "Red Team : 0 WIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gen_preset" parent="." instance=ExtResource( 4 )]

margin/left = 541.0
margin/top = 378.0
margin/right = 685.0
margin/bottom = 573.0

[node name="pick_knight" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 731.0
margin/top = 314.0
margin/right = 871.0
margin/bottom = 541.0

[node name="play" type="Button" parent="pick_knight"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 137.0
margin/right = 132.0
margin/bottom = 189.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "START"
flat = false

[node name="player1" type="OptionButton" parent="pick_knight"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 36.0
margin/right = 120.0
margin/bottom = 76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="player2" type="OptionButton" parent="pick_knight"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 86.0
margin/right = 120.0
margin/bottom = 126.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[connection signal="pressed" from="pick_knight/play" to="." method="_on_play_pressed"]


